# rust-calculator-gui

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lexer.rs  main.rs  parser.rs
tests/: lexer_test.rs
ui/: appwindow.slint
