[package]
name = "rust-calculator-gui"
version = "0.1.0"
authors = ["faidz"]
edition = "2021"
build = "build.rs"
description = "one of the if not the calculator app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "BEST ACLCULATOIR!!11!one"
identifier = "io.github.fqidz.rust_calculator"


